--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>KATLOUNIA.SPACE</title>
 </head>
-<body>
-  <img src="pattern.png" alt="">
-</body>
+<style>
+  body {
+    background: url(pattern.png)
+    }
+</style>
 </html>
